<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView android:id="@+id/cvRv"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:orientation="vertical"
    android:layout_margin="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_post"
                android:layout_width="match_parent"
                android:layout_height="183dp"
                android:contentDescription="@string/story_picture"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_rvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="10dp"
                android:text="@string/name"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_post"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_rvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/description"
                android:textSize="13sp"
                android:maxLines="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rvName"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>