<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_detail"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="12dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_post_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/story_picture"
            tools:src="@tools:sample/avatars"
            app:layout_constraintCircleRadius="10dp"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cv_detail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/cv_detail"
        app:layout_constraintTop_toBottomOf="@+id/cv_detail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_desc_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>